Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bebatch-deployment
spec:
  replicas: 1  # Numero di repliche del pod
  selector:
    matchLabels:
      app: bebatch
  template:
    metadata:
      labels:
        app: bebatch
    spec:
      containers:
        - name: bebatch-container
          image: ghcr.io/mirdan2024/be-bebatch:1.0.0
          ports:
            - containerPort: 8080  # Porta esposta dal container
          volumeMounts:
            - name: my-config-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: my-config-volume
          configMap:
            name: bebatch-configmap  # Monta la ConfigMap come volume
