ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bebase-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ''
spec:
  ingressClassName: nginx
  rules:
  - host: api.aegisx.cloud
    http:
      paths:
      - path: /base
        pathType: Prefix
        backend:
          service:
            name: bebase-service
            port:
              number: 8080
